--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: CI/CD
+name: Compodoc Documentation
 
 on:
   push:
@@ -28,7 +28,7 @@ jobs:
         run: pnpm compodoc
 
       - name: Deploy to GitHub Pages
-        uses: JamesIves/github-pages-deploy-action@4.1.5
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          branch: gh-pages
-          folder: documentation
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./documentation
