--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "compodoc:dev": "compodoc -p tsconfig.json -s -o -c .compodoc.json",
-    "compodoc": "compodoc -p tsconfig.json -d documentation"
+    "compodoc": "compodoc -p tsconfig.json -d docs"
   },
   "dependencies": {
     "@nestjs/axios": "^3.0.1",
