--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "start:dev-hmr": "nest build --webpack --webpackPath webpack-hmr.config.js --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
+    "repl": "nest start --watch --entryFile repl",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "prettier": "prettier --write '*.{js,ts,json,md}'",
     "test": "jest",
